Fix shorts page, add basic search page and minor changes
- Make 'date' a standalone css class
- Fix issue with follow site link not showing blog RSS
- Make /shorts page display shorts cards for uniform look
- Use shorts card in shorts detail page

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -27,7 +27,7 @@ p {
 }
 
 a {
-  text-underline-offset: 0.3em;
+  text-underline-offset: 0.2em;
   color: red;
 }
 
@@ -57,6 +57,14 @@ a {
   justify-content: space-between;
   gap: 1em;
   padding-right: 2em;
+}
+
+#blog-follow {
+  font-weight: normal; 
+  display: flex;
+  align-items: flex-start;
+  gap: .5rem;
+  margin: 0;
 }
 
 .side-padded {
@@ -109,10 +117,6 @@ a {
   overflow: hidden;
 }
 
-.card .date {
-  margin: 0;
-}
-
 .card .slider-content {
   padding: 1rem;
 }
@@ -135,10 +139,11 @@ a {
   overflow-inline: scroll;
 }
 
-.card .date {
+.card-date {
   font-weight: normal;
   font-size: small;
   color: grey;
+  margin: 0;
 }
 
 .project-card {
@@ -235,13 +240,24 @@ a {
 }
 
 .shorts-page-item {
-  border: 1px solid grey;
+  border: 1px solid lightgrey;
   padding: 0.8rem;
   background-color: rgba(255, 255, 255, 10%);
   overflow: hidden;
   min-width: 45rem;
   max-width: 45rem;
+  height: auto;
   /* min-height: 10rem; */
+}
+
+
+.shorts-page-item .shorts-card-content img {
+  height: auto;
+}
+
+.shorts-page-item .shorts-card-content a {
+  text-decoration: underline;
+  text-decoration-color: grey;
 }
 
 #shorts-page-container {
@@ -249,7 +265,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .undecorated-link {
@@ -407,9 +423,13 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  max-width: 100ch;
   margin-top: 5rem;
   margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid lightgrey;
+  border-radius: 0.3rem;
 }
 
 #shorts-article-container .card {
